syntax = "proto3";

package grpcservice;

service GRPCService {
    rpc GetZero(Void) returns (Value) { }
    rpc GetInteger(Void) returns (Value) { }
    rpc GetIntegers(Value) returns (Values) { }
}

message Void {
}

message Value {
    int32 value = 1;
}

message Values {
    repeated int32 value = 1;
}